2007-08-09  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins/AddinRegistry.cs: Create host addin files in a directory
	  inside the database.
	* Mono.Addins.Database/AddinDatabase.cs: Bump add-in database version.
	  Removed debug code.

2007-08-08  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins/TreeNodeCollection.cs, Mono.Addins/TreeNode.cs: Clone the node
	  children list when notifying the add-in load event since it may change.

2007-08-08  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins/AddinRegistry.cs, Mono.Addins.Database/AddinDatabase.cs: Fix
	  problem about the current registry domain not being properly set when
	  the add-in database is regenerated due to an internal check.

2007-08-07  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Database/AddinDatabase.cs,
	  Mono.Addins.Database/AddinHostIndex.cs,
	  Mono.Addins.Database/AddinScanFolderInfo.cs,
	  Mono.Addins.Database/AddinScanner.cs,
	  Mono.Addins.Database/AddinUpdateData.cs,
	  Mono.Addins.Database/FileDatabase.cs,
	  Mono.Addins.Description/AddinDescription.cs,
	  Mono.Addins.Description/Extension.cs,
	  Mono.Addins.Description/ExtensionNodeSet.cs, Mono.Addins.mdp,
	  Mono.Addins/Addin.cs, Mono.Addins/AddinManager.cs,
	  Mono.Addins/AddinRegistry.cs, Mono.Addins/AddinSessionService.cs:
	  Implemented support for non-shared add-in folders. Add-ins located in
	  such folders won't be visible from other non-shared folders. Folders
	  containing add-in hosts are non-shared by default, wihch means that
	  different installations of the same application won't interfere each
	  other anymore.
	
	  Add-in roots now can have depencencies on other add-in roots lacated in
	  the same folder.
	
	  The add-in database format has changed.

2007-08-07  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins/RuntimeAddin.cs: Added missing null check.

2007-07-27  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Database/AddinDatabase.cs,